--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -3,13 +3,14 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/navigation"
     app:startDestination="@id/nav_reviews_room_movie">
+    <!-- ITEM LISTS -->
     <fragment
         android:id="@+id/nav_reviews_room_movie"
         android:name="com.ulicae.cinelog.android.v2.fragments.review.room.list.MovieReviewRoomListFragment"
         android:label="@string/title_fragment_movie_room">
         <action
             android:id="@+id/action_nav_reviews_room_movie_to_viewMovieRoomFragment"
-            app:destination="@id/viewReviewRoomFragment"
+            app:destination="@id/viewMovieReviewRoomFragment"
             app:enterAnim="@anim/nav_default_enter_anim"
             app:exitAnim="@anim/nav_default_exit_anim"
             app:launchSingleTop="false"
@@ -17,7 +18,7 @@
             app:popExitAnim="@anim/nav_default_pop_exit_anim"/>
         <action
             android:id="@+id/action_nav_reviews_room_movie_to_searchTmdbMovieRoomFragment"
-            app:destination="@id/searchTmdbMovieFragment"
+            app:destination="@id/searchTmdbMovieRoomFragment"
             app:enterAnim="@anim/nav_default_enter_anim"
             app:exitAnim="@anim/nav_default_exit_anim"
             app:launchSingleTop="false"
@@ -30,7 +31,7 @@
         android:label="@string/title_fragment_serie_room">
         <action
             android:id="@+id/action_nav_reviews_room_serie_to_viewSerieRoomFragment"
-            app:destination="@id/viewSerieRoomFragment"
+            app:destination="@id/viewSerieReviewRoomFragment"
             app:enterAnim="@anim/nav_default_enter_anim"
             app:exitAnim="@anim/nav_default_exit_anim"
             app:launchSingleTop="false"
@@ -77,63 +78,15 @@
             app:popEnterAnim="@anim/nav_default_pop_enter_anim"
             app:popExitAnim="@anim/nav_default_pop_exit_anim" />
     </fragment>
-    <fragment
-        android:id="@+id/searchTmdbMovieFragment"
-        android:name="com.ulicae.cinelog.android.v2.fragments.review.room.tmdbsearch.SearchTmdbMovieFragment"
-        android:label="@string/title_activity_add_kino" >
-        <action
-            android:id="@+id/action_searchTmdbMovieFragment_to_viewKinoFragment"
-            app:destination="@id/viewKinoFragment" />
-        <action
-            android:id="@+id/action_searchTmdbMovieFragment_to_editReviewFragment"
-            app:destination="@id/editReviewFragment"
-            app:enterAnim="@anim/nav_default_enter_anim"
-            app:exitAnim="@anim/nav_default_exit_anim"
-            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
-            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
-        <action
-            android:id="@+id/action_searchTmdbMovieFragment_to_viewUnregisteredItemFragment"
-            app:destination="@id/viewUnregisteredItemFragment"
-            app:enterAnim="@anim/nav_default_enter_anim"
-            app:exitAnim="@anim/nav_default_exit_anim"
-            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
-            app:popExitAnim="@anim/nav_default_pop_exit_anim"/>
-        <action
-            android:id="@+id/action_searchTmdbMovieFragment_to_wishlistItemFragment"
-            app:destination="@id/wishlistItemRoomFragment" />
-    </fragment>
-    <fragment
-        android:id="@+id/searchTmbdSerieFragment"
-        android:name="com.ulicae.cinelog.android.v2.fragments.review.room.tmdbsearch.SearchTmbdSerieFragment"
-        android:label="@string/title_activity_add_kino" >
-        <action
-            android:id="@+id/action_searchTmbdSerieFragment_to_viewSerieFragment"
-            app:destination="@id/viewSerieFragment" />
-        <action
-            android:id="@+id/action_searchTmbdSerieFragment_to_editReviewFragment"
-            app:destination="@id/editReviewFragment"
-            app:enterAnim="@anim/nav_default_enter_anim"
-            app:exitAnim="@anim/nav_default_exit_anim"
-            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
-            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
-        <action
-            android:id="@+id/action_searchTmbdSerieFragment_to_viewUnregisteredItemFragment"
-            app:destination="@id/viewUnregisteredItemFragment"
-            app:enterAnim="@anim/nav_default_enter_anim"
-            app:exitAnim="@anim/nav_default_exit_anim"
-            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
-            app:popExitAnim="@anim/nav_default_pop_exit_anim"/>
-        <action
-            android:id="@+id/action_searchTmbdSerieFragment_to_wishlistItemFragment"
-            app:destination="@id/wishlistItemRoomFragment" />
-    </fragment>
+
+    <!-- SEARCH TMDB -->
     <fragment
         android:id="@+id/searchTmdbMovieRoomFragment"
         android:name="com.ulicae.cinelog.android.v2.fragments.review.room.tmdbsearch.SearchTmdbMovieFragment"
         android:label="@string/title_activity_add_kino" >
         <action
             android:id="@+id/action_searchTmdbMovieRoomFragment_to_viewKinoRoomFragment"
-            app:destination="@id/viewReviewRoomFragment" />
+            app:destination="@id/viewMovieReviewRoomFragment" />
         <action
             android:id="@+id/action_searchTmdbMovieRoomFragment_to_editReviewFragment"
             app:destination="@id/editReviewFragment"
@@ -157,8 +110,8 @@
         android:name="com.ulicae.cinelog.android.v2.fragments.review.room.tmdbsearch.SearchTmbdSerieFragment"
         android:label="@string/title_activity_add_kino" >
         <action
-            android:id="@+id/action_searchTmbdSerieRoomFragment_to_viewSerieFragment"
-            app:destination="@id/viewSerieFragment" />
+            android:id="@+id/action_searchTmdbSerieRoomFragment_to_viewSerieRoomFragment"
+            app:destination="@id/viewMovieReviewRoomFragment" />
         <action
             android:id="@+id/action_searchTmbdSerieRoomFragment_to_editReviewFragment"
             app:destination="@id/editReviewFragment"
@@ -177,12 +130,14 @@
             android:id="@+id/action_searchTmbdSerieRoomFragment_to_wishlistItemFragment"
             app:destination="@id/wishlistItemRoomFragment" />
     </fragment>
+
+    <!-- ITEM VIEWS -->
     <fragment
-        android:id="@+id/viewReviewRoomFragment"
+        android:id="@+id/viewMovieReviewRoomFragment"
         android:name="com.ulicae.cinelog.android.v2.fragments.review.room.item.ReviewMovieRoomItemFragment"
         android:label="@string/title_activity_view_room_review">
         <action
-            android:id="@+id/action_viewKinoFragment_to_editReviewFragment"
+            android:id="@+id/action_viewMovieReviewRoomFragment_to_editReviewFragment"
             app:destination="@id/editReviewFragment"
             app:enterAnim="@anim/nav_default_enter_anim"
             app:exitAnim="@anim/nav_default_exit_anim"
@@ -190,42 +145,16 @@
             app:popExitAnim="@anim/nav_default_pop_exit_anim" />
     </fragment>
     <fragment
-        android:id="@+id/viewSerieRoomFragment"
+        android:id="@+id/viewSerieReviewRoomFragment"
         android:name="com.ulicae.cinelog.android.v2.fragments.review.room.item.ReviewSerieRoomItemFragment"
         android:label="@string/title_activity_view_room_review_serie">
         <action
-            android:id="@+id/action_viewSerieFragment_to_editReviewFragment"
+            android:id="@+id/action_viewSerieReviewRoomFragment_to_editReviewFragment"
             app:destination="@id/editReviewFragment"
             app:enterAnim="@anim/nav_default_enter_anim"
             app:exitAnim="@anim/nav_default_exit_anim"
             app:popEnterAnim="@anim/nav_default_pop_enter_anim"
             app:popExitAnim="@anim/nav_default_pop_exit_anim" />
-    </fragment>
-    <fragment
-        android:id="@+id/editReviewFragment"
-        android:name="com.ulicae.cinelog.android.v2.fragments.review.edit.ReviewEditionFragment"
-        android:label="@string/title_activity_view_kino" >
-        <action
-            android:id="@+id/action_editReviewFragment_to_nav_reviews_movie"
-            app:destination="@id/nav_reviews_movie"
-            app:popUpTo="@id/nav_reviews_movie"
-            app:popUpToInclusive="true" />
-        <action
-            android:id="@+id/action_editReviewFragment_to_nav_reviews_serie"
-            app:destination="@id/nav_reviews_serie"
-            app:popUpTo="@id/nav_reviews_serie"
-            app:popUpToInclusive="true" />
-
-        <action
-            android:id="@+id/action_editReviewFragment_to_nav_reviews_room_movie"
-            app:destination="@id/nav_reviews_room_movie"
-            app:popUpTo="@id/nav_reviews_room_movie"
-            app:popUpToInclusive="true" />
-        <action
-            android:id="@+id/action_editReviewFragment_to_nav_reviews_room_serie"
-            app:destination="@id/nav_reviews_room_serie"
-            app:popUpTo="@id/nav_reviews_room_serie"
-            app:popUpToInclusive="true" />
     </fragment>
     <fragment
         android:id="@+id/viewUnregisteredItemFragment"
@@ -239,6 +168,25 @@
             app:popEnterAnim="@anim/nav_default_pop_enter_anim"
             app:popExitAnim="@anim/nav_default_pop_exit_anim" />
     </fragment>
+
+    <!-- REVIEW EDITION -->
+    <fragment
+        android:id="@+id/editReviewFragment"
+        android:name="com.ulicae.cinelog.android.v2.fragments.review.edit.ReviewEditionFragment"
+        android:label="@string/title_activity_view_kino" >
+        <action
+            android:id="@+id/action_editReviewFragment_to_nav_reviews_room_movie"
+            app:destination="@id/nav_reviews_room_movie"
+            app:popUpTo="@id/nav_reviews_room_movie"
+            app:popUpToInclusive="true" />
+        <action
+            android:id="@+id/action_editReviewFragment_to_nav_reviews_room_serie"
+            app:destination="@id/nav_reviews_room_serie"
+            app:popUpTo="@id/nav_reviews_room_serie"
+            app:popUpToInclusive="true" />
+    </fragment>
+
+    <!-- WISHLIST ITEMS -->
     <fragment
         android:id="@+id/wishlistItemRoomFragment"
         android:name="com.ulicae.cinelog.room.fragments.wishlist.item.WishlistItemRoomFragment"
@@ -269,6 +217,8 @@
             app:popUpTo="@id/nav_reviews_room_serie"
             app:popUpToInclusive="true" />
     </fragment>
+
+    <!-- TAG EDITION -->
     <fragment
         android:id="@+id/editTagFragment"
         android:name="com.ulicae.cinelog.android.v2.fragments.review.room.tag.EditTagFragment"
